# iree-template-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  lint.yaml
custom_modules/: CMakeLists.txt  custom_modules_test.cc  native_module.cc  native_module.h
custom_modules/dialect/: CMakeLists.txt  conversion_patterns.cc  custom-opt-main.cc  custom-translate-main.cc  custom_dialect.cc  custom_dialect.h  custom_opt.cc  custom_translate.cc  init_dialect.h
iree_custom_modules/: custom_modules_test.cc  native_module.h
iree_custom_modules/dialect/: CMakeLists.txt  conversion_patterns.cc  custom-opt-main.cc  custom-translate-main.cc  custom_dialect.cc  init_dialect.h
iree_simple_embedding/: CMakeLists.txt  device_vmvx.c  simple_embedding_test.mlir
simple_embedding/: CMakeLists.txt  device_vmvx.c  simple_embedding.c  simple_embedding_test.cc
